--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "csv-viewer.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "deno bundle comp_bundle.js bundle.js; ./node_modules/.bin/browserify --transform babelify --outfile bundle-es5.js bundle.js"
   },
   "repository": {
     "type": "git",
@@ -20,6 +20,10 @@
   "devDependencies": {
     "@babel/cli": "^7.15.7",
     "@babel/core": "^7.15.5",
-    "@babel/preset-env": "^7.15.6"
+    "@babel/plugin-transform-runtime": "^7.15.0",
+    "@babel/preset-env": "^7.15.6",
+    "@babel/runtime-corejs3": "^7.15.4",
+    "babelify": "^10.0.0",
+    "browserify": "^17.0.0"
   }
 }
