--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "csv-viewer.js",
   "scripts": {
-    "build": "deno bundle comp_bundle.js bundle.js; ./node_modules/.bin/browserify --transform babelify --outfile bundle-es5.js bundle.js"
+    "build": "deno bundle comp_bundle.js bundle.js; ./node_modules/.bin/browserify --transform babelify --outfile bundle-es5.js bundle.js; ./node_modules/.bin/minify bundle-es5.js > bundle-es5.min.js; ./node_modules/.bin/minify bundle.js > bundle.min.js"
   },
   "repository": {
     "type": "git",
@@ -23,7 +23,9 @@
     "@babel/plugin-transform-runtime": "^7.15.0",
     "@babel/preset-env": "^7.15.6",
     "@babel/runtime-corejs3": "^7.15.4",
+    "babel-preset-minify": "^0.5.1",
     "babelify": "^10.0.0",
-    "browserify": "^17.0.0"
+    "browserify": "^17.0.0",
+    "minify": "^7.1.0"
   }
 }
