--- a/babel.config.json
+++ b/babel.config.json
@@ -12,5 +12,10 @@
   "plugins": [
     ["@babel/plugin-transform-runtime", { "corejs": 3 }]
   ],
-  "comments": false
+  "assumptions": {
+    "constantSuper": false,
+    "noClassCalls": false,
+    "setClassMethods": false,
+    "superIsCallableConstructor": false
+  }
 }
