--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@babel/runtime-corejs3": "^7.15.4",
     "babelify": "^10.0.0",
     "browserify": "^17.0.0",
+    "custom-elements-es5-adapter": "^1.0.0",
     "minify": "^7.1.0"
   }
 }
